Add Super Admin dashboard with registration system and data storage files

--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@
           <h2 class="section-title">Quick Access Portal</h2>
           <div class="login-options">
             <div class="login-card">
+              <i class='bx bxs-crown'></i>
+              <h3>Super Admin</h3>
+              <p>Ultimate system control and global management</p>
+              <button class="login-btn super-admin-btn" onclick="window.location.href='super-admin/dashboard.html'">Login as Super Admin</button>
+            </div>
+            
+            <div class="login-card">
               <i class='bx bxs-user-circle'></i>
               <h3>Director Login</h3>
               <p>Full preschool management and administration</p>
